--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <table>
     <tr>
       <td colspan="2" style="text-align: center;">
-        <img src="https://media.canva.com/v2/image-resize/format:PNG/height:472/quality:100/uri:ifs%3A%2F%2FM%2Fa956356a-772e-4d0c-8e24-c3974d4ba846/watermark:F/width:413?csig=AAAAAAAAAAAAAAAAAAAAAKn0w64VizqSfg4HnlFnFQfIlUZjT-GQaK1iVmpDLge8&exp=1747728918&osig=AAAAAAAAAAAAAAAAAAAAAMhp3GQTHhbGa0IpoMbuaJv35D4pauengCvAodSL243i&signer=media-rpc&x-canva-quality=thumbnail_large" class="profile-img" alt="Profile Photo">
+        <img src="MUHAMMAD ADZRI.png" class="profile-img" alt="Profile Photo">
       </td>
     </tr>
     <tr>
