--- a/borang_cenderahati.html
+++ b/borang_cenderahati.html
@@ -9,7 +9,7 @@
     <div class="navbar">
         <img src="https://cdn.freebiesupply.com/logos/large/2x/uitm-universiti-teknologi-mara-logo-svg-vector.svg" style="align-items:left;height: auto; width: 90px;;;">
         <a href="index.html">My profile</a>
-        <a href="borang_cenderahati.php">Form</a>
+        <a href="borang_cenderahati.html">Form</a>
     </div>
   <div class="container">
     <p style="text-align: right; font-size: 12px;">Borang Permohonan Cenderahati JHEP/01/2024</p>
