--- a/borang_cenderahati.html
+++ b/borang_cenderahati.html
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <form method="post" action="result.html" onsubmit="return validateForm();">
+    <form method="get" action="result.html" onsubmit="return validateForm();">
 
     <div class="section-title">KETERANGAN PEMOHON</div><br>
     <table>
