--- a/result.html
+++ b/result.html
@@ -13,18 +13,18 @@
     </div>
 <div class="container">
   <table>
-  <tr><th colspan="2" class="section-header">Maklumat Pemohon</th></tr>
+  <tr><th colspan="2">Maklumat Pemohon</th></tr>
   <tr><td>Nama Pemohon</td><td><?= htmlspecialchars($_GET["namaPemohon"] ?? '') ?></td></tr>
   <tr><td>No. Pekerja / Pelajar</td><td><?= htmlspecialchars($_GET["noPekerja"] ?? '') ?></td></tr>
   <tr><td>Bahagian / Pusat / Unit / Kolej</td><td><?= htmlspecialchars($_GET["bahagian"] ?? '') ?></td></tr>
   <tr><td>No. Telefon</td><td><?= htmlspecialchars($_GET["telefon"] ?? '') ?></td></tr>
 
-  <tr><th colspan="2" class="section-header">Maklumat Permohonan</th></tr>
+  <tr><th colspan="2">Maklumat Permohonan</th></tr>
   <tr><td>Program / Majlis</td><td><?= htmlspecialchars($_GET["program"] ?? '') ?></td></tr>
   <tr><td>Tarikh</td><td><?= htmlspecialchars($_GET["tarikh"] ?? '') ?></td></tr>
   <tr><td>Tempat</td><td><?= htmlspecialchars($_GET["tempat"] ?? '') ?></td></tr>
 
-  <tr><th colspan="2" class="section-header">Senarai Cenderahati / Alatulis</th></tr>
+  <tr><th colspan="2">Senarai Cenderahati / Alatulis</th></tr>
   <tr><th>Jenis</th><th>Unit Dipohon</th></tr>
   <tr><td>Plaque BHEP</td><td><?= (int)($_GET["plaque"] ?? 0) ?></td></tr>
   <tr><td>Key Chain</td><td><?= (int)($_GET["keychain"] ?? 0) ?></td></tr>
