--- a/result.html
+++ b/result.html
@@ -33,7 +33,7 @@
 </table>
 
 <div class="button-container">
-    <button onclick="window.location.href='borang_cenderahati.php'">Kembali ke Borang</button>
+    <button onclick="window.location.href='borang_cenderahati.html'">Kembali ke Borang</button>
     <button onclick="window.print()">Cetak</button>
 </div>
 
